# Actuate

./: .gitignore  Cargo.toml  README.md  bundler.toml
.github/workflows/: linux_build  macos_build.yml  rust.yml
src/: BoolButton.rs  CustomComboBox.rs  CustomParamSlider.rs  CustomPopupComboBox.rs  CustomVerticalSlider.rs  CustomWidgets.rs  LFOController.rs  Oscillator.rs  StateVariableFilter.rs  actuate_enums.rs  actuate_gui.rs  actuate_load_save_dialog.rs  actuate_structs.rs  audio_module.rs  fx.rs  lib.rs  old_preset_structs.rs  recorder.rs  release_downloader.rs  state_variable_filter.rs  toggle_switch.rs  ui_knob.rs
src/CustomWidgets/: BeizerButton.rs  BoolButton.rs  ComboBoxParam.rs  CustomComboBox.rs  CustomParamSlider.rs  CustomPopupComboBox.rs  CustomVerticalSlider.rs  slim_checkbox.rs  toggle_switch.rs  ui_knob.rs
src/FX/: StateVariableFilter.rs  delay.rs  flanger.rs  limiter.rs  reverb.rs  saturation.rs
src/audio_module/: AdditiveModule.rs  Oscillator.rs  frequency_modulation.rs
src/fx/: A4III_Filter.rs  A4II_Filter.rs  A4IV_Filter.rs  A4I_Filter.rs  ArduraFilter.rs  StateVariableFilter.rs  TiltFilter.rs  V4Filter.rs  VCFilter.rs  abass.rs  aw_galactic_reverb.rs  biquad_filters.rs  buffermodulator.rs  chorus.rs  compressor.rs  curve_distort.rs  delay.rs  fir_filter.rs  flanger.rs  limiter.rs  phaser.rs  saturation.rs  simple_space_reverb.rs
xtask/: Cargo.toml
