[package]
name = "Actuate"
version = "1.3.91"
edition = "2021"
authors = ["Ardura <azviscarra@gmail.com>"]
license = "GPL-3.0-or-later"
homepage = "https://github.com/ardura"
description = "Sampler + Synth"

[workspace]
members = ["xtask"]

[lib]
crate-type = ["cdylib","lib"]

[dependencies]
hound = "3.5.0"
lazy_static = "1.4.0"

# Nih plug fork for actuate
nih_plug = { git = "https://github.com/Ardura/nih-plug.git", rev = "32e4e96d0d9820f28bcfd22a6cde4c05b5c71a51", features = ["assert_process_allocs"] }
nih_plug_egui = { git = "https://github.com/Ardura/nih-plug.git", rev = "32e4e96d0d9820f28bcfd22a6cde4c05b5c71a51" }

# egui_file fork for nih-plug/Actuate
egui_file = { git = "https://github.com/Ardura/egui_file.git", rev = "409258b8858ac1fb881ae2b5e40ff6d4a5cd474a" }

num-complex = "0.4.4"
num-traits = "0.2.17"
once_cell = "1.18.0"
parking_lot = "0.12.1"
pitch_shift = "1.0.0"
rand = "0.8.5"
rand_pcg = "0.3.1"
serde = "1.0.188"
serde_json = "1.0.107"
dirs = "5.0.1"
walkdir = "2.5.0"
rayon = "1.10.0"
anyhow = "1.0.97"
ureq = { version = "3.0.10", features = ["json"] }
zip = "3.0.0"

[profile.release]
opt-level = 3
split-debuginfo = 'packed'
debug = false
debug-assertions = false
overflow-checks = false
lto = 'thin'
panic = 'unwind'
incremental = false
codegen-units = 1
rpath = false

[profile.profiling]
inherits = "release"
split-debuginfo = '...'
debug = true
rpath = false
lto = "off"
opt-level = 0
strip = "none"
